--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 	],
 	"require":
 	{
-		"silverstripe/framework": ">=3.1.x-dev,<4.0",
-		"silverstripe/cms": ">=3.1.x-dev,<4.0",
+		"silverstripe/framework": "~3.1",
+		"silverstripe/cms": "~3.1",
 		"swipestripe/swipestripe": "2.1.*"
 	},
 	"support": 
@@ -22,6 +22,6 @@
 		"email": "info@swipestripe.com",
 		"irc": "irc://irc.freenode.org/silverstripe",
 		"forum": "http://www.silverstripe.org/e-commerce-modules/",
-		"issues": "https://github.com/frankmullenger/silverstripe-swipestripe/issues"
+		"issues": "https://github.com/frankmullenger/silverstripe-swipestripe-addresses/issues"
 	}
 }
