--- a/_config/addresses.yml
+++ b/_config/addresses.yml
@@ -5,7 +5,7 @@ name: SwipeStripe Addresses
 Order:
   extensions: 
     - 'Addresses_Order'
-Customer:
+Member:
   extensions: 
     - 'Addresses_Customer'
 OrderForm:
